ADDED   syntax checking for static config folders. This functionality can be enabled/disabled using the new CHECK_STATIC_SYNTAX constant.
ADDED   script to link an additional contactgroup with existing hosts & services
ADDED   conversion script to make sure config is still generated the same way after an update to NConf 1.3 -> refer to the Update Information!
ADDED	"first_notification_delay" attribute to the classes host, service, advanced-service, host-template and service-template

REMOVED 'extended_host_info.cfg' and 'extended_service_info.cfg' files. The original contents of those files are now written to 'hosts.cfg' 
        and 'services.cfg' respectively. Also, those properties are now available both on Collector and Monitor servers.
REMOVED 'call_ajax.php' -> replaced with 'call_file.php'
REMOVED add_item.php -> implemented as handle_item.php
REMOVED modify_item.php -> implemented as handle_item.php
REMOVED multimodify_attr.php -> implemented as handle_item.php
REMOVED constant "CRYPT_SALT" -> NConf will now use the SALT correct, generating individual salt's or read from current password, as encryption should be made
REMOVED include/js/ajax-dynamic-content.js -> functionality replaced with jQuery & jQuery UI
REMOVED the -n parameter for all import scripts. No more need to specify the naming attribute when importing from various sources.

MOVED   config.orig/main.php (config/main.php) -> moved to root NConf directory (nconf/)
MOVED   include/history_tab.php -> moved to tabs directory include/tabs/history.php
MOVED	5 attributes from timeperiods to hosts/services directly (max_check_attempts, notification_interval etc.) -> refer to the Update Information!
MOVED	5 attributes from collectors/monitors to hosts/services directly (active_checks_enabled, notifications_enabled etc.) -> refer to the Update Information!

CHANGED step2 will now redirect directly to 'modify service' which will add all services of selected host-preset