@@ -10,6 +10,8 @@ if ( $status ){
 
     $lock_file_age = ( time() - filemtime($lock_file) );
     NConf_DEBUG::set($lock_file_age.' seconds', '', "lock file last set since");
+    NConf_DEBUG::set(" should be available in " . (600-$lock_file_age) . " seconds", '', 'Next execution');
+    NConf_DEBUG::set("Remove the 'generate.lock' in the 'temp' directory", '', 'Force remove lock?');
 
     # check if file is older than 5min(600sec) so replace it (should not be, because file will be removed)
     # but this will prevent lock file to stay there
